--- a/Admin/Filebrowser/docker-compose.yaml
+++ b/Admin/Filebrowser/docker-compose.yaml
@@ -1,7 +1,7 @@
 services: 
   file-browser:
     container_name: file-browser
-    image: filebrowser/filebrowser
+    image: filebrowser/filebrowser:s6
     healthcheck:
       test: curl -f http://localhost:8080/ || exit 1
     user: 3000:3000
