--- a/Admin/Glances/docker-compose.yaml
+++ b/Admin/Glances/docker-compose.yaml
@@ -25,7 +25,7 @@ services:
       - "traefik.http.routers.glances-secure.entrypoints=https"
       - "traefik.http.routers.glances-secure.rule=Host(`glances.ziejacode.com`)"
       - "traefik.http.routers.glances-secure.tls=true"
-      - "traefik.http.routers.glances-secure.tls.certresolver=cloudflare"
+      #- "traefik.http.routers.glances-secure.tls.certresolver=cloudflare"
       - "traefik.http.routers.glances-secure.service=glances"
       - "traefik.http.services.glances.loadbalancer.server.port=80"
       - "traefik.http.routers.glances-secure.middlewares=authelia@docker"
