--- a/Admin/Filebrowser/docker-compose.yaml
+++ b/Admin/Filebrowser/docker-compose.yaml
@@ -1,10 +1,10 @@
 services: 
   file-browser:
     container_name: file-browser
-    image: filebrowser/filebrowser:s6
-    healthcheck:
-      test: curl -f http://localhost:8080/ || exit 1
-    user: 3000:3000
+    image: filebrowser/filebrowser
+    #healthcheck:
+    #  test: curl -f http://localhost:8080/ || exit 1
+    user: 0:0
     #environment:
     #  - TZ=Europe/Dublin
     #  - PUID=3000
